--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/CesarHenriqueRamos/Rentalx-nodejs#readme",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "eslint": "^8.42.0",
@@ -35,7 +36,11 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "@types/multer": "^1.4.7",
+    "csv-parse": "^5.4.0",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "swagger-ui-express": "^4.6.3",
     "uuid": "^9.0.0"
   }
 }
