--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/CesarHenriqueRamos/Rentalx-nodejs#readme",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
@@ -38,8 +40,10 @@
   },
   "dependencies": {
     "@types/multer": "^1.4.7",
+    "bcrypt": "^5.1.0",
     "csv-parse": "^5.4.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
